# DesktopPet

./: CMakeLists.txt  assets.qrc  main.cpp  require.txt
